# Mestrado-Semb-C

./: CMakeLists.txt  constants.h  cpp_classification_results_channels_18.txt  cpp_classification_results_channels_2.txt  cpp_classification_results_channels_31.txt  main.cpp  negative.txt  test.txt
data/: file_loading.cpp  file_loading.h
layers/: forward_pass.cpp  pooling.cpp
